# python-mesh-to-gdml

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-test.yml  python-app.yml
files/: cube.ascii.stl  cube.binary.stl  cube.stl  cylinder.stl  iaxo-logo-cathode.binary.stl
src/mesh2gdml/: __init__.py  mesh.py  stl.py
test/: test_mesh_from_file.py
