[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "mesh2gdml"
description = "Convert mesh (STL) to GDML"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]
dynamic = [
    "version"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mesh2gdml/_version.py"

[tool.hatch.metadata]
allow-direct-references = false

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error"
]
log_cli_level = "INFO"
minversion = "6.0"
testpaths = ["test"]
xfail_strict = true

[project.optional-dependencies]
test = [
    "pytest",
    "pre-commit",
]

[tool.ruff]
src = ["src"]

isort.required-imports = ["from __future__ import annotations"]
